--- a/src/pages/portfolio/section_about/about.scss
+++ b/src/pages/portfolio/section_about/about.scss
@@ -1,7 +1,7 @@
 /* About */
-@import "../../assets/styles/00_utils/3_mixins";
-@import "../../assets/styles/00_utils/1_variables";
-@import "../../assets/styles/00_utils/4_fonts";
+@import "../../../assets/styles/00_utils/3_mixins";
+@import "../../../assets/styles/00_utils/1_variables";
+@import "../../../assets/styles/00_utils/4_fonts";
 
 .about {
     &-content {
