--- a/src/pages/portfolio/section_contact/contact.scss
+++ b/src/pages/portfolio/section_contact/contact.scss
@@ -1,5 +1,5 @@
 /* contact */
-@import "../../assets/styles/00_utils/4_fonts";
+@import "../../../assets/styles/00_utils/4_fonts";
 
 .contact-title {
     color: var(--skin-color);
