--- a/src/pages/portfolio/section_home/home.scss
+++ b/src/pages/portfolio/section_home/home.scss
@@ -1,6 +1,6 @@
 /* Home */
-@import "../../assets//styles/00_utils/3_mixins";
-@import "../../assets//styles/00_utils/4_fonts";
+@import "../../../assets//styles/00_utils/3_mixins";
+@import "../../../assets//styles/00_utils/4_fonts";
 .border-design,
 .border-design2 {
     position: absolute;
