--- a/src/pages/portfolio/section_services/services.scss
+++ b/src/pages/portfolio/section_services/services.scss
@@ -1,6 +1,6 @@
 /* Services */
-@import "../../assets/styles/00_utils/3_mixins";
-@import "../../assets/styles/00_utils/4_fonts";
+@import "../../../assets/styles/00_utils/3_mixins";
+@import "../../../assets/styles/00_utils/4_fonts";
 
 .service_container {
     align-self: center;
