--- a/src/pages/portfolio/section_portfolio/portfolio.scss
+++ b/src/pages/portfolio/section_portfolio/portfolio.scss
@@ -1,7 +1,7 @@
-@import "../../assets/styles/00_utils/4_fonts";
-@import "../../assets/styles/00_utils/1_variables";
-@import "../../assets/styles/00_utils/2_functions";
-@import "../../assets/styles/00_utils/3_mixins";
+@import "../../../assets/styles/00_utils/4_fonts";
+@import "../../../assets/styles/00_utils/1_variables";
+@import "../../../assets/styles/00_utils/2_functions";
+@import "../../../assets/styles/00_utils/3_mixins";
 
 .portfolio .portfolio-heading {
     flex: 100%;
