--- a/src/test.scss
+++ b/src/test.scss
@@ -1,57 +1,34 @@
-@import "./assets/styles/00_utils/4_fonts";
-// @media screen and (max-width: 1440px) {
-//     .home {
-//         .row {
-//             gap: 3.21416857986225%;
-//             .blockInfo {
-//                 .home-info {
-//                     h3.hello {
-//                         // @include h3;
-//                         span {
-//                             font-family: "Clicker Script", cursive;
-//                             // font-size: 1.15em;
-//                         }
-//                     }
+#top {
+    width: 100%;
+    top: 0vh;
+    left: 0;
+    z-index: 100000000;
+    animation: gab 0.5s linear;
+    -webkit-animation: gab 0.5s linear;
+}
 
-//                     h3.my-profession {
-//                         // font-size: 1.5em;
-//                     }
+@keyframes gab {
+    0% {
+        height: 100vh;
+    }
+    100% {
+        height: 0vh;
+    }
+}
 
-//                     p {
-//                         // font-size: 1.115em;
-//                         // padding-right: 3em;
-//                     }
-//                 }
-//             }
-//         }
-//     }
-// }
-// @media screen and (max-width: 1710px) {
-//     .home {
-//         .row {
-//             .blockInfo {
-//                 .home-info {
-//                     h3.hello {
-//                         @include h3;
-//                         background: #000;
-
-//                         span {
-//                             font-family: "Clicker Script", cursive;
-//                             font-size: 1.25em;
-//                         }
-//                     }
-
-//                     h3.my-profession {
-//                         // font-size: 1.875em;
-//                         font-size: 1.5em;
-//                     }
-
-//                     p {
-//                         font-size: 1.115em;
-//                         padding-right: 3em;
-//                     }
-//                 }
-//             }
-//         }
-//     }
-// }
+#home {
+    top: 0;
+    animation: gab 0.45s linear;
+    -webkit-animation: gab 0.45s linear;
+}
+@keyframes gab {
+    0% {
+        left: 100vw;
+        top: -60px;
+        opacity: 0;
+    }
+    100% {
+        left: 0vw;
+        top: 0;
+    }
+}
