--- a/src/test.scss
+++ b/src/test.scss
@@ -1,20 +1,20 @@
-#top {
-    width: 100%;
-    top: 0vh;
-    left: 0;
-    z-index: 100000000;
-    animation: gab 0.5s linear;
-    -webkit-animation: gab 0.5s linear;
-}
+// #top {
+//     width: 100%;
+//     top: 0vh;
+//     left: 0;
+//     z-index: 100000000;
+//     animation: gab 0.5s linear;
+//     -webkit-animation: gab 0.5s linear;
+// }
 
-@keyframes gab {
-    0% {
-        height: 100vh;
-    }
-    100% {
-        height: 0vh;
-    }
-}
+// @keyframes gab {
+//     0% {
+//         height: 100vh;
+//     }
+//     100% {
+//         height: 0vh;
+//     }
+// }
 
 #home {
     top: 0;
