--- a/src/assets/styles/01_base/04_darkMode.scss
+++ b/src/assets/styles/01_base/04_darkMode.scss
@@ -130,16 +130,81 @@ body.dark {
 @media screen and (max-width: 992px) {
     body.dark {
         .aside {
-            background-color: rgba-color($bg-black-900-dark, 0.75);
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-            -webkit-backdrop-filter: blur(5px);
-            backdrop-filter: blur(5px);
-        }
-        .nav {
             background-color: rgba-color($bg-black-900-dark, 0.5);
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
             -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
+
+            // @include drop-shadow(0 4px 30px rgba(48, 46, 77, 10.1));
+
+            &_bg {
+                &_bottom {
+                    background-color: rgba-color($bg-black-900-dark, 0.5);
+                    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+                    -webkit-backdrop-filter: blur(5px);
+                    backdrop-filter: blur(5px);
+                }
+            }
+            .logo {
+                background-color: rgba-color($bg-black-900-dark, 0.5);
+                // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+                -webkit-backdrop-filter: blur(5px);
+                backdrop-filter: blur(5px);
+            }
+            .nav {
+                background-color: rgba-color($bg-black-900-dark, 0.75);
+                box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+                -webkit-backdrop-filter: blur(5px);
+                backdrop-filter: blur(5px);
+            }
+            .switcher-container {
+                .style-switcher {
+                    background-color: rgba-color($bg-black-900-dark, 0.05);
+                    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+                    -webkit-backdrop-filter: blur(5px);
+                    backdrop-filter: blur(5px);
+                    border: none;
+                }
+            }
+        }
+    }
+    body.light {
+        .aside {
+            @include drop-shadow(0 4px 30px rgba(48, 46, 77, 0.1));
+            background-color: rgba-color($bg-black-900-light, 0.5);
+            -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(5px);
+            &_bg {
+                &_bottom {
+                    background-color: rgba-color($bg-black-900-light, 0.5);
+                    -webkit-backdrop-filter: blur(5px);
+                    backdrop-filter: blur(5px);
+                }
+            }
+            .logo {
+                background-color: rgba-color($bg-black-900-light, 0.5);
+                box-shadow: 0 4px 30px rgba(48, 46, 77, 0.1);
+                -webkit-backdrop-filter: blur(5px);
+                backdrop-filter: blur(5px);
+            }
+            .nav {
+                background-color: rgba-color($bg-black-900-light, 0.75);
+                // box-shadow: 0 4px 30px rgba(48, 46, 77, 0.1);
+                -webkit-backdrop-filter: blur(5px);
+                backdrop-filter: blur(5px);
+                li.head-btn {
+                    border-bottom: 1px solid #fff;
+                }
+            }
+            .switcher-container {
+                .style-switcher {
+                    background-color: rgba-color($bg-black-900-light, 0.05);
+                    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+                    -webkit-backdrop-filter: blur(5px);
+                    backdrop-filter: blur(5px);
+                    border: none;
+                }
+            }
         }
     }
 }
