--- a/src/assets/styles/01_base/_01_base.scss
+++ b/src/assets/styles/01_base/_01_base.scss
@@ -99,15 +99,18 @@ ul {
 }
 
 .modal {
-    position: fixed;
-    min-height: calc(100vh - 0px);
+    position: absolute;
+    // min-height: calc(100vh - 0px);
+    height: 100%;
+    width: 100vh;
     top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1;
     background-color: rgba-color($bg-black-900-light, 0.5);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(3px);
 
