--- a/src/assets/styles/01_base/_03_navToggler.scss
+++ b/src/assets/styles/01_base/_03_navToggler.scss
@@ -7,8 +7,7 @@
     @include transition(all, 0.5s, ease);
 }
 .modal {
-    width: calc(100% - 270px);
-    left: 270px;
+    width: 100%;
     @include transition(all, 0.5s, ease);
 }
 
@@ -21,10 +20,6 @@
         @include transform(translateX(-270px));
         animation: slide 0.4s ease;
     }
-    .modal {
-        width: calc(100vw + 0px);
-        left: 270px;
-    }
 }
 .close {
     .main-content {
@@ -33,7 +28,7 @@
         animation: slide 0.4s ease reverse;
     }
     .modal {
-        width: calc(100vw - 270px);
+        width: 100%;
     }
 }
 
