--- a/src/components/00-Header/header.scss
+++ b/src/components/00-Header/header.scss
@@ -123,12 +123,15 @@
                 color: var(--text-black-900);
                 padding: 16.625px 0px;
             }
+            .lang:hover {
+                color: var(--skin-color);
+            }
             a.active-link,
             a.active-link .icon {
                 color: var(--skin-color);
             }
-            a .icon {
-                margin-left: 15px;
+            a,
+            .icon {
                 color: var(--text-black-900);
             }
             .icon,
