--- a/src/assets/styles/01_base/_02_pages.scss
+++ b/src/assets/styles/01_base/_02_pages.scss
@@ -8,6 +8,10 @@
     min-height: 100vh;
     color: var(--text-black-900);
     position: relative;
+    // background-image: url(../../img/circuit-imprimé.svg);
+    // background-repeat: no-repeat;
+    // background-position: center;
+    // background-size: contain;
     .container {
         flex: 0 0 87.47130206625124%;
         max-width: 87.47130206625124%;
