--- a/src/assets/styles/01_base/_04_responsive.scss
+++ b/src/assets/styles/01_base/_04_responsive.scss
@@ -38,7 +38,10 @@
 @media screen and (max-width: 1440px) {
     .border-design,
     .border-design2 {
-        display: none;
+        // display: none;
+        width: 100%;
+        height: 100%;
+        border-bottom-left-radius: 0px;
     }
     .home {
         .row {
@@ -47,7 +50,7 @@
             gap: 7.2%;
             padding: 2em 0 0 0;
             border-bottom-left-radius: 0px;
-            top: 1em;
+            // top: 2em;
             left: 0;
             border: 1px solid var(--bg-black-50);
 
@@ -89,8 +92,8 @@
                         // background-image: url(${require(`../../assets/img/a.png`)});i
 
                         background-repeat: no-repeat;
-                        background-position: top;
-                        background-size: cover;
+                        background-position: bottom;
+                        background-size: 100%;
                     }
                     img {
                         display: none;
@@ -188,163 +191,186 @@
         }
     }
 }
-@media screen and (max-width: 1280px) {
-    .home {
-        .row {
-            .home-info {
-                justify-content: center;
-                .home-title {
-                    position: absolute;
-                    left: 0;
-                    top: 0;
-                    margin: 0;
-                    width: 100%;
-                    text-align: right;
-                    padding: 12px 1em;
-                    span.name {
-                        text-align: center;
-                        width: 100%;
-                    }
-                }
 
-                .home-card {
-                    align-items: center;
-                    &_group {
-                        margin: 1.25em 0;
-                        .presentation_title,
-                        .presentation_typing {
-                            text-align: center;
-                            align-items: center;
-                            font-size: 1.5em;
-                        }
+// @media screen and (max-width: 1280px) {
+//     .home {
+//         .row {
+//             .home-info {
+//                 justify-content: center;
+//                 .home-title {
+//                     position: absolute;
+//                     left: 0;
+//                     top: 0;
+//                     margin: 0;
+//                     width: 100%;
+//                     text-align: right;
+//                     padding: 12px 1em;
+//                     span.name {
+//                         text-align: center;
+//                         width: 100%;
+//                     }
+//                 }
 
-                        .typing {
-                            width: 100%;
-                            align-items: center;
-                        }
-                    }
+//                 .home-card {
+//                     align-items: center;
+//                     &_group {
+//                         margin: 1.25em 0;
+//                         .presentation_title,
+//                         .presentation_typing {
+//                             text-align: center;
+//                             align-items: center;
+//                             font-size: 1.5em;
+//                         }
 
-                    .home-card-content {
-                        margin: 1em 1em 0 1em;
+//                         .typing {
+//                             width: 100%;
+//                             align-items: center;
+//                         }
+//                     }
 
-                        &_description {
-                            .home-quote {
-                                text-align: center;
-                                width: 100%;
-                                display: block;
+//                     .home-card-content {
+//                         margin: 1em 1em 0 1em;
 
-                                margin: 0 auto;
-                                padding: 0;
-                            }
-                        }
-                        .content-inner {
-                            padding: 1em 0em;
-                            &_description {
-                                font-style: italic;
-                            }
-                            &_quote {
-                                padding-left: 20px;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-@media screen and (max-width: 1080px) {
-    .home {
-        .row {
-            flex-flow: column nowrap;
-            border: 1px solid var(--bg-black-50);
-            top: 0;
-            padding: 0 0.5em 50px 0.5em;
-            min-height: 75vh;
-            .home-info {
-                position: static;
-                .home-title {
-                    position: absolute;
-                    text-align: center;
-                    top: 0;
-                    width: 100%;
+//                         &_description {
+//                             .home-quote {
+//                                 text-align: center;
+//                                 width: 100%;
+//                                 display: block;
 
-                    span.name {
-                        display: block;
-                    }
-                }
-                .home-card {
-                    justify-content: flex-start;
-                    // justify-content: center;
-                    width: 100%;
-                    margin: 0;
-                    &_group {
-                        width: 100%;
-                        text-align: center;
-                        margin: 0;
-                        .presentation_title {
-                            display: none;
-                        }
-                        .presentation_typing {
-                            font-size: 1.875em;
-                        }
-                    }
-                    .home-card-content {
-                        display: flex;
-                        flex-flow: column;
-                        justify-content: center;
-                        font-size: 1.115em;
-                        margin: 0.75em 0.5em 0 0.5em;
-                        &_description {
-                            text-align: center;
-                            .home-quote {
-                                position: static;
-                                margin: 0 auto 0.675em;
-                                padding: 0;
-                                display: inline-block;
-                            }
-                            .quote-description {
-                                // margin: 0 1em;
-                            }
-                        }
-                        .content-inner {
-                            align-self: center;
-                            margin: 0 0.65em 0;
-                            max-width: 391px;
-                        }
-                    }
-                }
-            }
-            .blockImg {
-                margin-top: 100px;
-                height: 333px;
-                .home-img {
-                    &::after {
-                        top: 90px;
-                        left: 0px;
-                        // z-index: 0;
-                        width: 100.13px;
-                        height: 160px;
-                    }
-                    &::before {
-                        bottom: -37px;
-                        right: -8px;
-                    }
-                    .centerNB {
-                        height: 360px;
-                    }
-                }
-            }
-        }
-        .bgDraw {
-            .tsparticles {
-                top: -180px !important;
-                right: -300px !important;
-                // transform: rotate(22.5deg);
-            }
-        }
-        .bgDraw2 {
-            bottom: 3.2%;
-            height: 10vh;
-        }
-    }
-}
+//                                 margin: 0 auto;
+//                                 padding: 0;
+//                             }
+//                         }
+//                         .content-inner {
+//                             padding: 1em 0em;
+//                             &_description {
+//                                 font-style: italic;
+//                             }
+//                             &_quote {
+//                                 padding-left: 20px;
+//                             }
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+// @media screen and (max-width: 1080px) {
+//     .home {
+//         .row {
+//             flex-flow: column nowrap;
+//             border: 1px solid var(--bg-black-50);
+//             top: 0;
+//             padding: 0 0.5em 50px 0.5em;
+//             min-height: 75vh;
+//             min-height: 826.48px;
+//             .home-info {
+//                 position: static;
+//                 .home-title {
+//                     position: absolute;
+//                     text-align: center;
+//                     top: 0;
+//                     width: 100%;
+
+//                     span.name {
+//                         display: block;
+//                     }
+//                 }
+//                 .home-card {
+//                     justify-content: flex-start;
+//                     width: 100%;
+//                     margin: 0;
+//                     &_group {
+//                         width: 100%;
+//                         text-align: center;
+//                         margin: 0;
+//                         .presentation_title {
+//                             display: none;
+//                         }
+//                         .presentation_typing {
+//                             font-size: 1.875em;
+//                         }
+//                     }
+//                     .home-card-content {
+//                         display: flex;
+//                         flex-flow: column;
+//                         justify-content: center;
+//                         font-size: 1.115em;
+//                         margin: 0.75em 0.5em 0 0.5em;
+//                         &_description {
+//                             text-align: center;
+//                             .home-quote {
+//                                 position: static;
+//                                 margin: 0 auto 0.675em;
+//                                 padding: 0;
+//                                 display: inline-block;
+//                             }
+//                             .quote-description {
+//                                 // margin: 0 1em;
+//                             }
+//                         }
+//                         .content-inner {
+//                             align-self: center;
+//                             margin: 0 0.65em 0;
+//                             max-width: 391px;
+//                         }
+//                     }
+//                 }
+//             }
+//             .blockImg {
+//                 margin-top: 110px;
+//                 height: 333px;
+//                 .home-img {
+//                     &::after {
+//                         top: 90px;
+//                         left: 0px;
+//                         // z-index: 0;
+//                         width: 100.13px;
+//                         height: 160px;
+//                     }
+//                     &::before {
+//                         bottom: -37px;
+//                         right: -8px;
+//                     }
+//                     .centerNB {
+//                         height: 360px;
+//                     }
+//                 }
+//             }
+//         }
+//         .bgDraw {
+//             .tsparticles {
+//                 top: -180px !important;
+//                 right: -300px !important;
+//                 // transform: rotate(22.5deg);
+//             }
+//         }
+//         .bgDraw2 {
+//             width: calc(100% - 0px);
+//             margin: auto;
+//             bottom: 5.1vh;
+//             left: 0px;
+//             height: calc(45vh - 413px);
+//         }
+//     }
+//     @media screen and (max-height: 1180px) {
+//         .bgDraw2 {
+//             position: absolute;
+//             min-height: calc(50vh - 412.5px);
+//             bottom: 0px !important; 
+//             .tsparticles2,
+//             #tsparticles2 {
+//                 width: 100% !important;
+//                 height: 100% !important;
+//                 bottom: 0px !important; 
+//                 left: 0 !important; 
+//             }
+//         }
+//     }
+//     @media screen and (min-height: 1180px) {
+//         .bgDraw2 {
+//             height: calc(45vh - 410px);
+//         }
+//     }
+// }
