--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -23,7 +23,9 @@ a.btn_a {
     cursor: pointer;
 
     -webkit-font-smoothing: antialiased;
-    // box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+    @include drop-shadow(0 4px 15px rgba(48, 46, 77, 0.1));
+
     margin: 30px 0 58px 7px;
     background: linear-gradient(
         -193.33deg,
